UX improvements for scepters